compiler-cli/src/tests/snapshots/gleam_cli__tests__echo__echo_bool.snap
---
source: compiler-cli/src/tests/echo.rs
expression: output
---
--- main.gleam ----------------------
pub fn main() {
  echo True
  echo False
}


--- gleam run output ----------------
[90msrc/main.gleam:2[39m
True
[90msrc/main.gleam:3[39m
False
