compiler-cli/src/tests/snapshots/gleam_cli__tests__echo__echo_importing_module_named_inspect.snap
---
source: compiler-cli/src/tests/echo.rs
expression: output
---
--- main.gleam ----------------------
import inspect

pub fn main() {
  echo inspect.x
}


--- gleam run output ----------------
[90msrc/main.gleam:4[39m
Nil
