compiler-cli/src/tests/snapshots/gleam_cli__tests__echo__echo_nil.snap
---
source: compiler-cli/src/tests/echo.rs
expression: output
---
--- main.gleam ----------------------
pub fn main() {
  echo Nil
}


--- gleam run output ----------------
[90msrc/main.gleam:2[39m
Nil
